Add sample Dockerfile

--- a/RpsService/Properties/launchSettings.json
+++ b/RpsService/Properties/launchSettings.json
@@ -12,14 +12,14 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/rpssimulator",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "RPSService": {
       "commandName": "Project",
-      "launchUrl": "api/values",
+      "launchUrl": "api/rpssimulator",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
