--- a/RpsService/Dockerfile
+++ b/RpsService/Dockerfile
@@ -2,11 +2,11 @@ FROM microsoft/aspnetcore-build:2.0 AS build-env
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
-COPY ./RpsService/*.csproj ./
+COPY ./*.csproj ./
 RUN dotnet restore
 
 # Copy everything else and build
-COPY ./RpsService/ ./
+COPY . ./
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
