--- a/RpsService/Dockerfile
+++ b/RpsService/Dockerfile
@@ -13,4 +13,6 @@ RUN dotnet publish -c Release -o out
 FROM microsoft/aspnetcore:2.0
 WORKDIR /app
 COPY --from=build-env /app/out .
+
+EXPOSE 80 5000
 ENTRYPOINT ["dotnet", "RPSService.dll"]
