--- a/RpsService/appsettings.json
+++ b/RpsService/appsettings.json
@@ -1,8 +1,12 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "10101010-1010-1010-1010-101010101010"
+  }
 }
